--- a/newsbot.yml
+++ b/newsbot.yml
@@ -3,7 +3,7 @@ token:  {TOKEN}
 newslist:
   - name:       Hot news 24tv.ua
     url:        https://24tv.ua/rss/tag/1792.xml
-    isEnabled:  true
+    isenabled:  true
   - name:       All news 24tv.ua
     url:        https://24tv.ua/rss/all.xml
-    isEnabled:  false
+    isenabled:  false
