--- a/newsbot.yml
+++ b/newsbot.yml
@@ -1,7 +1,7 @@
 Token: {TOKEN}
 
 NewsList:
-  - Name:       24 Канал - Головні новини
+  - Name:       24 Канал
     URL:        https://24tv.ua/rss/tag/1792.xml
     IsEnabled:  true
     ID:         1
@@ -9,3 +9,23 @@ NewsList:
     URL:        https://www.liga.net/news/top/rss.xml
     IsEnabled:  true
     ID:         2
+  - Name:       Корреспондент
+    URL:        http://k.img.com.ua/rss/ru/events.xml
+    IsEnabled:  true
+    ID:         3
+  - Name:       Информ-UA
+    URL:        https://inform-ua.info/feed/rss/editors-choice
+    IsEnabled:  true
+    ID:         4
+  - Name:       Украинская правда
+    URL:        https://www.pravda.com.ua/rus/rss/view_mainnews/
+    IsEnabled:  true
+    ID:         5
+  - Name:       РБК-Украина
+    URL:        https://www.rbc.ua/static/rss/ukrnet.strong.rus.rss.xml
+    IsEnabled:  true
+    ID:         6
+  - Name:       Факты-UA
+    URL:        https://fakty.ua/rss_feed/ukraina
+    IsEnabled:  true
+    ID:         7
